--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "npm": ">=3"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "lodash": "4.17.10",
     "prop-types": "15.6.2",
     "rc-slider": "^8.6.6",
     "react": "16.4.2",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "16.4.2",
     "react-hot-loader": "4.3.4"
   },
@@ -53,7 +56,7 @@
     "babel-core": "7.0.0-bridge.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
+    "@babel/core": "7.0.0-beta.56",
     "@babel/plugin-proposal-class-properties": "7.0.0-beta.56",
     "@babel/plugin-proposal-decorators": "7.0.0-beta.56",
     "@babel/plugin-proposal-export-namespace-from": "7.0.0-beta.56",
@@ -65,14 +68,14 @@
     "@babel/plugin-syntax-import-meta": "7.0.0-beta.56",
     "@babel/plugin-transform-runtime": "7.0.0-beta.56",
     "@babel/polyfill": "7.0.0-beta.56",
-    "@babel/preset-env": "^7.0.0-beta.56",
+    "@babel/preset-env": "7.0.0-beta.56",
     "@babel/preset-react": "7.0.0-beta.56",
     "@babel/register": "7.0.0-beta.56",
     "@babel/runtime": "7.0.0-beta.56",
     "babel-core": "7.0.0-beta.3",
     "babel-eslint": "8.2.6",
     "babel-jest": "23.4.2",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "8.0.0-beta.2",
     "babel-plugin-lodash": "3.3.4",
     "browserslist": "4.0.1",
     "clean-webpack-plugin": "0.1.19",
@@ -103,7 +106,7 @@
     "pretty-quick": "1.6.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.22.0",
-    "webpack": "^4.16.5",
+    "webpack": "4.16.5",
     "webpack-cli": "3.1.0",
     "webpack-merge": "4.1.4",
     "webpack-serve": "2.0.2"
